--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -171,7 +171,7 @@ year = {2021}
 author = {Seemann, Torsten},
 booktitle = {https://github.com/tseemann/mlst},
 mendeley-groups = {Chile_ESBLEcoli},
-title = {{MLST}},
+title = {{MLST: https://github.com/tseemann/mlst}},
 year = {2022}
 }
 
