paper.bib add reference (fix #29 and #30)

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -29,6 +29,17 @@ volume = {35},
 year = {2017}
 }
 
+@article{Petit:2020,
+abstract = {Bactopia: a flexible pipeline for complete analysis of bacterial genomes.},
+author = {Petit III, R. A., & Read, T. D.},
+doi = {10.1128/mSystems.00190-20},
+issn = {2379-5077},
+journal = {Msystems},
+publisher = {American Society for Microbiology},
+title = {{Bactopia: a flexible pipeline for complete analysis of bacterial genomes}},
+year = {2020}
+}
+
 @article{Chen:2018,
 abstract = {Motivation Quality control and preprocessing of FASTQ files are essential to providing clean data for downstream analysis. Traditionally, a different tool is used for each operation, such as quality control, adapter trimming and quality filtering. These tools are often insufficiently fast as most are developed using high-level programming languages (e.g. Python and Java) and provide limited multi-threading support. Reading and loading data multiple times also renders preprocessing slow and I/O inefficient. Results We developed fastp as an ultra-fast FASTQ preprocessor with useful quality control and data-filtering features. It can perform quality control, adapter trimming, quality filtering, per-read quality pruning and many other operations with a single scan of the FASTQ data. This tool is developed in C++ and has multi-threading support. Based on our evaluation, fastp is 2-5 times faster than other FASTQ preprocessing tools such as Trimmomatic or Cutadapt despite performing far more operations than similar tools. Availability and implementation The open-source code and corresponding instructions are available at https://github.com/OpenGene/fastp.},
 author = {Chen, Shifu and Zhou, Yanqing and Chen, Yaru and Gu, Jia},
