fix am. eng. to british eng., clean bib file

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -17,7 +17,6 @@ file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded
 issn = {1546-1696},
 journal = {Nature Biotechnology 2017 35:4},
 keywords = {Computational biology and bioinformatics,Data publication and archiving},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {apr},
 number = {4},
 pages = {316--319},
@@ -47,7 +46,6 @@ doi = {10.1093/BIOINFORMATICS/BTY560},
 issn = {1367-4803},
 journal = {Bioinformatics},
 keywords = {Contact,chen@haploxcom},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {sep},
 number = {17},
 pages = {i884--i890},
@@ -66,7 +64,6 @@ doi = {10.1002/CPBI.102},
 issn = {1934-340X},
 journal = {Current Protocols in Bioinformatics},
 keywords = {biosynthetic gene clusters,de novo assembly,genome assembly,metagenomes,plasmids,transcriptome},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {jun},
 number = {1},
 pages = {e102},
@@ -85,7 +82,6 @@ doi = {10.1371/JOURNAL.PCBI.1005595},
 issn = {1553-7358},
 journal = {PLOS Computational Biology},
 keywords = {Bacterial genomics,Chromosome pairs,Genome sequencing,Genomics,Klebsiella pneumoniae,Operons,Plasmid construction,Sequence alignment},
-mendeley-groups = {Pipeline_nf_wgs},
 month = {jun},
 number = {6},
 pages = {e1005595},
@@ -105,7 +101,6 @@ file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded
 issn = {1474760X},
 journal = {Genome Biology},
 keywords = {Alignment-free methods,Metagenomics,Metagenomics classification,Microbiome,Minimizers,Probabilistic data structures},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {nov},
 number = {1},
 pages = {1--13},
@@ -124,7 +119,6 @@ doi = {10.1038/S41596-022-00738-Y},
 file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded/Lu et al. - 2022 - Metagenome analysis using the Kraken software suite.pdf:pdf},
 issn = {17502799},
 journal = {Nature protocols},
-mendeley-groups = {Pipeline_nf_wgs},
 month = {dec},
 number = {12},
 pages = {2815},
@@ -143,7 +137,6 @@ doi = {10.1093/BIOINFORMATICS/BTT086},
 file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded/Gurevich et al. - 2013 - QUAST quality assessment tool for genome assemblies.pdf:pdf},
 issn = {1367-4803},
 journal = {Bioinformatics},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {apr},
 number = {8},
 pages = {1072--1075},
@@ -166,7 +159,6 @@ isbn = {002162155.1},
 issn = {15371719},
 journal = {Molecular Biology and Evolution},
 keywords = {completeness,eukaryotes,genome,metagenomes,microbes,prokaryotes,quality assessment,transcriptome,viruses},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 month = {sep},
 number = {10},
 pages = {4647--4654},
@@ -180,10 +172,9 @@ year = {2021}
 
 @misc{Seemann:2022,
 author = {Seemann, Torsten},
-booktitle = {https://github.com/tseemann/mlst},
-mendeley-groups = {Chile_ESBLEcoli},
-title = {{MLST: https://github.com/tseemann/mlst}},
-year = {2022}
+title = {MLST},
+year = {2022},
+url = "https://github.com/tseemann/mlst"
 }
 
 @article{Carattoli:2014,
@@ -193,7 +184,6 @@ doi = {10.1128/AAC.02412-14},
 issn = {1098-6596},
 journal = {Antimicrobial agents and chemotherapy},
 keywords = {Alessandra Carattoli,Bacterial,Bacterial / genetics,Computer Simulation,Databases,Drug Resistance,Ea Zankari,Enterobacteriaceae / genetics,Genetic*,Genome,Henrik Hasman,Internet,MEDLINE,Multilocus Sequence Typing / methods*,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Non-U.S. Gov't,PMC4068535,Plasmids / genetics*,PubMed Abstract,Replicon,Reproducibility of Results,Research Support,doi:10.1128/AAC.02412-14,pmid:24777092},
-mendeley-groups = {Pipeline_nf_wgs},
 number = {7},
 pages = {3895--3903},
 pmid = {24777092},
@@ -212,7 +202,6 @@ file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded
 issn = {2057-5858},
 journal = {Microbial genomics},
 keywords = {Alexander Goesmann,Bacterial / genetics,Bacterial / genetics*,Bacterial Proteins / genetics*,Chromosomes,Computational Biology / methods*,Contig Mapping / methods,Drug Resistance,Escherichia coli / genetics*,Genome,High-Throughput Nucleotide Sequencing,MEDLINE,Multiple,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Non-U.S. Gov't,Oliver Schwengers,PMC7660248,Patrick Barth,Plasmids / genetics*,PubMed Abstract,Research Support,Software,Whole Genome Sequencing,doi:10.1099/mgen.0.000398,pmid:32579097},
-mendeley-groups = {Pipeline_nf_wgs},
 number = {10},
 pages = {1--12},
 pmid = {32579097},
@@ -231,7 +220,6 @@ file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded
 issn = {1362-4962},
 journal = {Nucleic acids research},
 keywords = {Andrew G McArthur,Anti-Bacterial Agents / pharmacology,Bacterial,Brian P Alcock,Data Curation*,Databases,Drug Resistance,Factual*,Genes,Likelihood Functions,MEDLINE,Machine Learning*,Microbial*,Molecular Sequence Annotation,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Non-U.S. Gov't,PMC9825576,PubMed Abstract,Research Support,Software,William Huynh,doi:10.1093/nar/gkac920,pmid:36263822},
-mendeley-groups = {Pipeline_nf_wgs},
 month = {jan},
 number = {D1},
 pmid = {36263822},
@@ -251,7 +239,6 @@ isbn = {0123456789},
 issn = {2045-2322},
 journal = {Scientific Reports 2021 11:1},
 keywords = {Antimicrobial resistance,Computational biology and bioinformatics,Databases,Genome informatics,Microbiology},
-mendeley-groups = {Pipeline_nf_wgs,AMR_WGS},
 month = {jun},
 number = {1},
 pages = {1--9},
@@ -269,7 +256,6 @@ author = {Seemann, Torsten},
 doi = {10.1093/BIOINFORMATICS/BTU153},
 issn = {1367-4803},
 journal = {Bioinformatics},
-mendeley-groups = {Pipeline_nf_wgs},
 month = {jul},
 number = {14},
 pages = {2068--2069},
@@ -289,7 +275,6 @@ file = {:Users/2021jh002/Library/Application Support/Mendeley Desktop/Downloaded
 issn = {20575858},
 journal = {Microbial Genomics},
 keywords = {Bacteria,Genome annotation,Metagenome-assembled genomes,Plasmids,Whole-genome sequencing},
-mendeley-groups = {Chile_ESBLEcoli,Pipeline_nf_wgs},
 number = {11},
 pages = {685},
 pmid = {34739369},
@@ -306,7 +291,6 @@ author = {Page, Andrew J. and Cummins, Carla A. and Hunt, Martin and Wong, Vanes
 doi = {10.1093/BIOINFORMATICS/BTV421},
 issn = {1367-4803},
 journal = {Bioinformatics},
-mendeley-groups = {Pipeline_nf_wgs},
 month = {nov},
 number = {22},
 pages = {3691--3693},
